log/build_2022-11-01_14-58-49/py_demo/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/carl/docker_nao/undergraduate-ros-project/install/py_demo/lib/python3.10/site-packages/py_demo/demo.py", line 11
    except Exception, e:
           ^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized

